---
source: cubesql/src/compile/test/test_introspection.rs
expression: "execute_query(\"\n                SELECT nspname, typname\n                FROM pg_type t\n                JOIN pg_namespace n ON n.oid = t.typnamespace\n                WHERE t.oid IN (SELECT DISTINCT enumtypid FROM pg_enum e);\n                \".to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+---------+---------+
| nspname | typname |
+---------+---------+
+---------+---------+
